--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -7,7 +7,11 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <h1>Odin Recipies</h1>
+        <ul>
+            <li><a href="recipes/ramen.html">Ramen</a></li>
+            <li><a href="recipes/cottagepie.html">Cottage Pie</a></li>
+            <li><a href="recipes/cubano.html">Cubano Sandwich</a></li>
+        </ul>
 </body>
 </html>
